fix: align username text to center in the profile

--- a/virtual-event/src/styles/ParticipantProfile.scss
+++ b/virtual-event/src/styles/ParticipantProfile.scss
@@ -94,6 +94,7 @@
         font-size: 18px;
         font-weight: 600;
         color: $text-high-emphasis;
+        text-align: center;
       }
     }
 
